<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/dp20"
    android:paddingLeft="@dimen/dp20"
    android:paddingRight="@dimen/dp20"
    android:paddingTop="@dimen/dp20"
    tools:context="com.androidtutorialshub.loginregister.NoHpActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp40"
            android:src="@drawable/titleapp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutNoHpTujuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp40">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextNoHpTujuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nohptujuan"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="13"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutJumlahPulsa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextJumlahPulsa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_jlhpulsa"
                android:inputType="number"
                android:maxLines="1"
                android:enabled="false"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonTransfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp40"
            android:background="@drawable/rounded"
            android:textStyle="bold"
            android:text="@string/text_transfer"
            android:textColor="@color/White"/>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp32">
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewLinkPulsa"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_pulsa"
                android:padding="@dimen/dp8"
                android:textSize="18dp"
                android:textColor="@color/White"/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewLinkHome"
                android:layout_width="160dp"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/text_home"
                android:padding="@dimen/dp8"
                android:textSize="18dp"
                android:textColor="@color/White"/>

        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>
