<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/dp20"
    android:paddingLeft="@dimen/dp20"
    android:paddingRight="@dimen/dp20"
    android:paddingTop="@dimen/dp20"
    tools:context="com.androidtutorialshub.loginregister.SecurityActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp40"
            android:src="@drawable/titleapp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutNoPINlama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp40"
            app:passwordToggleEnabled = "true"
            app:passwordToggleTint="@color/White">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextNoPINlama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_oldpin"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:maxLines="1"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutNoPINbaru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            app:passwordToggleEnabled = "true"
            app:passwordToggleTint="@color/White">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextNoPINbaru"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_newpin"
                android:inputType="numberPassword"
                android:maxLines="1"
                android:maxLength="6"
                android:textColor="@android:color/white" />
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp40"
            android:background="@drawable/rounded"
            android:textStyle="bold"
            android:textColor="@color/White"
            android:text="@string/text_submit" />
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>
